--- a/docs/microsite/data/menu.yml
+++ b/docs/microsite/data/menu.yml
@@ -13,3 +13,10 @@ options:
        url: docs/syntax/option
      - title: Type-safe Equal
        url: docs/syntax/type-safe-equal
+
+  - title: typeclass
+    url: docs/typeclass
+    menu_section: typeclass-section
+    nested_options:
+      - title: Semi-Group
+        url: docs/typeclass/semi-group
