--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
             ${{ runner.os }}-ivy-scala-2_10-
 
       - name: Build for Scala 2.10
-        run: .github/workflows/sbt-build-simple.sh 2.10.7
+        run: .github/workflows/sbt-build-simple.sh core 2.10.7
 
   build_scala2_11:
     runs-on: ubuntu-latest
@@ -50,7 +50,7 @@ jobs:
             ${{ runner.os }}-ivy-scala-2_11-
 
       - name: Build for Scala 2.11
-        run: .github/workflows/sbt-build-simple.sh 2.11.12
+        run: .github/workflows/sbt-build-simple.sh core 2.11.12
 
   build_scala2_12:
     runs-on: ubuntu-latest
@@ -74,7 +74,7 @@ jobs:
             ${{ runner.os }}-ivy-scala-2_12-
 
       - name: Build for Scala 2.12
-        run: .github/workflows/sbt-build-simple.sh 2.12.10
+        run: .github/workflows/sbt-build-simple.sh core 2.12.10
 
   build_scala2_13:
     runs-on: ubuntu-latest
@@ -100,4 +100,4 @@ jobs:
       - name: Build for Scala 2.13
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: .github/workflows/sbt-build.sh 2.13.0
+        run: .github/workflows/sbt-build.sh core 2.13.0
