--- a/docs/microsite/data/menu.yml
+++ b/docs/microsite/data/menu.yml
@@ -8,27 +8,27 @@ options:
     menu_section: syntax-section
     nested_options:
      - title: Either
-       url: docs/syntax/either
+       url: docs/syntax/either.html
      - title: Option
-       url: docs/syntax/option
+       url: docs/syntax/option.html
      - title: Type-safe Equal
-       url: docs/syntax/type-safe-equal
+       url: docs/syntax/type-safe-equal.html
 
   - title: Typeclass
     url: docs/typeclass
     menu_section: typeclass-section
     nested_options:
       - title: Semi-Group
-        url: docs/typeclass/semi-group
+        url: docs/typeclass/semi-group.html
       - title: Monoid
-        url: docs/typeclass/monoid
+        url: docs/typeclass/monoid.html
       - title: Functor
-        url: docs/typeclass/functor
+        url: docs/typeclass/functor.html
       - title: Applicative
-        url: docs/typeclass/applicative
+        url: docs/typeclass/applicative.html
       - title: Monad
-        url: docs/typeclass/monad
+        url: docs/typeclass/monad.html
       - title: WriterT / Writer
-        url: docs/typeclass/writer-t
+        url: docs/typeclass/writer-t.html
       - title: EitherT
-        url: docs/typeclass/either-t
+        url: docs/typeclass/either-t.html
