Added: Build numbers in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,10 +91,12 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
           CURRENT_BRANCH_NAME: ${{ github.ref }}
+          PUSH_NUMBER: ${{ github.event.push.number }}
         run: |
           echo "[BEFORE]CURRENT_BRANCH_NAME=${CURRENT_BRANCH_NAME}"
           export CURRENT_BRANCH_NAME="${CURRENT_BRANCH_NAME#refs/heads/}"
           echo " [AFTER]CURRENT_BRANCH_NAME=${CURRENT_BRANCH_NAME}"
+          echo "Push #${PUSH_NUMBER} => ${CURRENT_BRANCH_NAME}"
           export CI_BRANCH=$CURRENT_BRANCH_NAME
           .github/workflows/sbt-build.sh core 2.13.3
 
@@ -103,7 +105,8 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
           CURRENT_BRANCH_NAME: ${{ github.base_ref }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           export CI_BRANCH="PR-$CURRENT_BRANCH_NAME"
-          echo "Rull request to the '${CURRENT_BRANCH_NAME}' branch"
+          echo "PR #${PR_NUMBER} => Rull request to the '${CURRENT_BRANCH_NAME}' branch"
           .github/workflows/sbt-build.sh core 2.13.3
