Added: Scala name - Scala | Dotty

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,10 @@ jobs:
     strategy:
       matrix:
         scala:
-          - { version: "2.11.12", binary-version: "2.11", java-version: "8" }
-          - { version: "2.12.12", binary-version: "2.12", java-version: "11" }
-          - { version: "2.13.3",  binary-version: "2.13", java-version: "11" }
-          - { version: "0.26.0-RC1", binary-version: "0.26", java-version: "11" }
+          - { name: 'Scala', version: "2.11.12", binary-version: "2.11", java-version: "8" }
+          - { name: 'Scala', version: "2.12.12", binary-version: "2.12", java-version: "11" }
+          - { name: 'Scala', version: "2.13.3",  binary-version: "2.13", java-version: "11" }
+          - { name: 'Dotty', version: "0.26.0-RC1", binary-version: "0.26", java-version: "11" }
 
     steps:
       - uses: actions/checkout@v2
@@ -45,7 +45,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-ivy-scala-${{ matrix.scala.binary-version }}-
 
-      - name: "[Push] Build All for Scala ${{ matrix.scala.version }} - ${{ github.run_number }}"
+      - name: "[Push] Build All for ${{ matrix.scala.name }} ${{ matrix.scala.version }} - ${{ github.run_number }}"
         if: github.event_name == 'push'
         env:
           CURRENT_BRANCH_NAME: ${{ github.ref }}
@@ -61,7 +61,7 @@ jobs:
           java -version
           .github/workflows/sbt-build-all.sh ${{ matrix.scala.version }}
 
-      - name: "[PR] Build All for Scala ${{ matrix.scala.version }} - PR-#${{ github.event.pull_request.number }} - ${{ github.run_number }}"
+      - name: "[PR] Build All for ${{ matrix.scala.name }} ${{ matrix.scala.version }} - PR-#${{ github.event.pull_request.number }} - ${{ github.run_number }}"
         if: github.event_name == 'pull_request'
         env:
           CURRENT_BRANCH_NAME: ${{ github.base_ref }}
