--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,9 @@ jobs:
           - { name: "Scala 2", version: "2.13.3",  binary-version: "2.13", java-version: "11" }
           - { name: "Scala 3", version: "3.0.0-M1", binary-version: "3.0.0-M1", java-version: "11" }
           - { name: 'Scala 3', version: "3.0.0-M2", binary-version: "3.0.0-M2", java-version: "11" }
+          - { name: 'Scala 3', version: "3.0.0-M3", binary-version: "3.0.0-M3", java-version: "11" }
+          - { name: 'Scala 3', version: "3.0.0-RC1", binary-version: "3.0.0-RC1", java-version: "11" }
+          - { name: 'Scala 3', version: "3.0.0-RC2", binary-version: "3.0.0-RC2", java-version: "11" }
 
     steps:
       - uses: actions/checkout@v2
