--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,31 +5,29 @@ on:
     tags:
       - '*'
 
+env:
+  SCALA_BINARY_VERSION: "2.13.3"
+
 jobs:
-  build:
+  gh-release:
 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: olafurpg/setup-scala@v10
         with:
-          java-version: "11"
+          java-version: "adopt@1.11"
 
-      - name: Cache Coursier
-        uses: actions/cache@v1
+      - name: Cache SBT
+        uses: actions/cache@v2
         with:
-          path: ~/.cache/coursier
-          key: ${{ runner.os }}-coursier-scala-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
+          path: |
+            ~/.ivy2/cache
+            ~/.cache/coursier
+            ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ env.SCALA_BINARY_VERSION }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
           restore-keys: |
-            ${{ runner.os }}-coursier-scala-${{ matrix.scala.binary-version }}-
-
-      - name: Cache Ivy
-        uses: actions/cache@v1
-        with:
-          path: ~/.ivy2/cache
-          key: ${{ runner.os }}-ivy-scala-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-ivy-scala-${{ matrix.scala.binary-version }}-
+            ${{ runner.os }}-sbt-${{ env.SCALA_BINARY_VERSION }}-
 
       - name: sbt GitHub Release
         env:
@@ -43,52 +41,45 @@ jobs:
           echo 'sbt -J-Xmx2048m clean +test +packagedArtifacts gitHubRelease'
           sbt \
             -J-Xmx2048m \
-            clean \
-            +test \
-            +packagedArtifacts \
-            gitHubRelease
+            devOopsGitHubRelease
 
   publish:
-    needs: build
+    needs: gh-release
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         scala:
-          - { name: "Scala 2", version: "2.11.12", binary-version: "2.11", java-version: "8" }
-          - { name: "Scala 2", version: "2.12.12", binary-version: "2.12", java-version: "11" }
-          - { name: "Scala 2", version: "2.13.3",  binary-version: "2.13", java-version: "11" }
-          - { name: "Scala 3", version: "3.0.0-M1", binary-version: "3.0.0-M1", java-version: "11" }
-          - { name: 'Scala 3', version: "3.0.0-M2", binary-version: "3.0.0-M2", java-version: "11" }
-          - { name: 'Scala 3', version: "3.0.0-M3", binary-version: "3.0.0-M3", java-version: "11" }
-          - { name: 'Scala 3', version: "3.0.0-RC1", binary-version: "3.0.0-RC1", java-version: "11" }
-          - { name: 'Scala 3', version: "3.0.0-RC2", binary-version: "3.0.0-RC2", java-version: "11" }
+          - { name: 'Scala 2', version: "2.11.12",   binary-version: "2.11",      java-version: "adopt@1.8"  }
+          - { name: 'Scala 2', version: "2.12.12",   binary-version: "2.12",      java-version: "adopt@1.11" }
+          - { name: 'Scala 2', version: "2.13.3",    binary-version: "2.13",      java-version: "adopt@1.11" }
+          - { name: 'Scala 3', version: "3.0.0-M1",  binary-version: "3.0.0-M1",  java-version: "adopt@1.11" }
+          - { name: 'Scala 3', version: "3.0.0-M2",  binary-version: "3.0.0-M2",  java-version: "adopt@1.11" }
+          - { name: 'Scala 3', version: "3.0.0-M3",  binary-version: "3.0.0-M3",  java-version: "adopt@1.11" }
+          - { name: 'Scala 3', version: "3.0.0-RC1", binary-version: "3.0.0-RC1", java-version: "adopt@1.11" }
+          - { name: 'Scala 3', version: "3.0.0-RC2", binary-version: "3.0.0-RC2", java-version: "adopt@1.11" }
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: olafurpg/setup-scala@v10
         with:
           java-version: ${{ matrix.scala.java-version }}
 
-      - name: Cache Coursier
-        uses: actions/cache@v1
+      - name: Cache SBT
+        uses: actions/cache@v2
         with:
-          path: ~/.cache/coursier
-          key: ${{ runner.os }}-coursier-scala-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
+          path: |
+            ~/.ivy2/cache
+            ~/.cache/coursier
+            ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
           restore-keys: |
-            ${{ runner.os }}-coursier-scala-${{ matrix.scala.binary-version }}-
-
-      - name: Cache Ivy
-        uses: actions/cache@v1
-        with:
-          path: ~/.ivy2/cache
-          key: ${{ runner.os }}-ivy-scala-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-ivy-scala-${{ matrix.scala.binary-version }}-
+            ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-
 
       - name: "sbt Publish for ${{ matrix.scala.name }} ${{ matrix.scala.version }} - ${{ github.run_number }}"
         env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_AUTH_TOKEN_GITHUB }}
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
           BINTRAY_PASS: ${{ secrets.BINTRAY_PASS }}
         run: |
@@ -97,12 +88,15 @@ jobs:
           mkdir -p dotty-docs
           export SOURCE_DATE_EPOCH=$(date +%s)
           echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
-          echo 'sbt -J-Xmx2048m ++${{ matrix.scala.version }}! -v clean publish'
+          echo 'sbt -J-Xmx2048m ++${{ matrix.scala.version }}! -v clean test packagedArtifacts publish'
           sbt \
             -J-Xmx2048m \
             ++${{ matrix.scala.version }}! \
             -v \
             clean \
+            test \
+            packagedArtifacts \
+            devOopsGitHubReleaseUploadArtifacts \
             publish
 
   publish_maven:
