--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: sbt GitHub Release
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_AUTH_TOKEN_GITHUB }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
         run: |
           echo "Run] sbt GitHub release"
           echo "mkdir -p dotty-docs"
@@ -76,7 +76,7 @@ jobs:
 
       - name: "sbt Publish for ${{ matrix.scala.name }} ${{ matrix.scala.version }} - ${{ github.run_number }}"
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_AUTH_TOKEN_GITHUB }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
           BINTRAY_PASS: ${{ secrets.BINTRAY_PASS }}
         run: |
