--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,16 +7,18 @@ on:
 
 env:
   SCALA_BINARY_VERSION: "2.13.3"
+  GH_JAVA_VERSION: "adopt@1.11"
+
 
 jobs:
   gh-release:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
       - uses: olafurpg/setup-scala@v10
         with:
-          java-version: "adopt@1.11"
+          java-version: ${{ env.GH_JAVA_VERSION }}
 
       - name: Cache SBT
         uses: actions/cache@v2
@@ -48,20 +50,14 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        scala:
-          - { name: 'Scala 2', version: "2.11.12",   binary-version: "2.11",      java-version: "adopt@1.8"  }
-          - { name: 'Scala 2', version: "2.12.12",   binary-version: "2.12",      java-version: "adopt@1.11" }
-          - { name: 'Scala 2', version: "2.13.3",    binary-version: "2.13",      java-version: "adopt@1.11" }
-          - { name: 'Scala 3', version: "3.0.0-RC1", binary-version: "3.0.0-RC1", java-version: "adopt@1.11" }
-          - { name: 'Scala 3', version: "3.0.0-RC2", binary-version: "3.0.0-RC2", java-version: "adopt@1.11" }
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
       - uses: olafurpg/setup-scala@v10
         with:
-          java-version: ${{ matrix.scala.java-version }}
+          java-version: ${{ env.GH_JAVA_VERSION }}
+      - uses: olafurpg/setup-gpg@v3
 
       - name: Cache SBT
         uses: actions/cache@v2
@@ -70,45 +66,26 @@ jobs:
             ~/.ivy2/cache
             ~/.cache/coursier
             ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
           restore-keys: |
-            ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-
+            ${{ runner.os }}-sbt
 
-      - name: "sbt Publish for ${{ matrix.scala.name }} ${{ matrix.scala.version }} - ${{ github.run_number }}"
+      - name: "sbt ci-release - ${{ github.run_number }}"
         env:
+          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
-          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-          BINTRAY_PASS: ${{ secrets.BINTRAY_PASS }}
         run: |
-          echo "Run] sbt publish All for Scala ${{ matrix.scala.version }}"
-          echo "mkdir -p dotty-docs"
-          mkdir -p dotty-docs
+          echo "Run] sbt ci-release"
           export SOURCE_DATE_EPOCH=$(date +%s)
           echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
-          echo 'sbt -J-Xmx2048m ++${{ matrix.scala.version }}! -v clean test packagedArtifacts publish'
-          sbt \
-            -J-Xmx2048m \
-            ++${{ matrix.scala.version }}! \
+          echo 'sbt -J-Xmx2048m -v clean +test +packagedArtifacts ci-release devOopsGitHubReleaseUploadArtifacts'
+          sbt -J-Xmx2048m \
             -v \
             clean \
-            test \
-            packagedArtifacts \
-            devOopsGitHubReleaseUploadArtifacts \
-            publish
-
-  publish_maven:
-    needs: publish
-    if: startsWith(github.ref, 'refs/tags/v')
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Sync to Maven Central
-        env:
-          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-          BINTRAY_PASS: ${{ secrets.BINTRAY_PASS }}
-        run: |
-          export GITHUB_TAG=${GITHUB_REF#refs/tags/}
-          .github/workflows/maven_central_sync.sh
+            +test \
+            +packagedArtifacts \
+            ci-release \
+            devOopsGitHubReleaseUploadArtifacts
