--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,12 @@ name: Build-All
 
 on:
   push:
+    branches-ignore:
+      - main
+
+  pull_request:
     branches:
-      - "**"
+      - main
 
 
 jobs:
@@ -21,7 +25,7 @@ jobs:
           - { name: 'Scala 3', version: "3.0.0-RC2", binary-version: "3.0.0-RC2", java-version: "adopt@1.11", report: "" }
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
       - uses: olafurpg/setup-scala@v10
         with:
           java-version: ${{ matrix.scala.java-version }}
