--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release
 
 on:
   push:
+    branches:
+      - main
     tags:
       - '*'
 
@@ -12,6 +14,7 @@ env:
 
 jobs:
   gh-release:
+    needs: startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
     steps:
@@ -40,7 +43,7 @@ jobs:
         mkdir -p dotty-docs
         export SOURCE_DATE_EPOCH=$(date +%s)
         echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
-        echo 'sbt -J-Xmx2048m clean +test +packagedArtifacts gitHubRelease'
+        echo 'sbt -J-Xmx2048m devOopsGitHubRelease'
         sbt \
           -J-Xmx2048m \
           devOopsGitHubRelease
@@ -71,6 +74,7 @@ jobs:
           ${{ runner.os }}-sbt
 
     - name: "sbt ci-release - ${{ github.run_number }}"
+      if: startsWith(github.ref, 'refs/tags/v')
       env:
         PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
         PGP_SECRET: ${{ secrets.PGP_SECRET }}
@@ -91,3 +95,52 @@ jobs:
           +packagedArtifacts \
           ci-release \
           devOopsGitHubReleaseUploadArtifacts
+
+
+  publish-snapshot:
+    needs: startsWith(github.ref, 'refs/heads/')
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
+      - uses: olafurpg/setup-scala@v10
+        with:
+          java-version: ${{ env.GH_JAVA_VERSION }}
+      - uses: olafurpg/setup-gpg@v3
+
+      - name: Cache SBT
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.ivy2/cache
+            ~/.cache/coursier
+            ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-sbt
+
+      - name: "sbt ci-release (no tag) - ${{ github.run_number }}"
+        if: startsWith(github.ref, 'refs/heads/')
+        env:
+          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
+        run: |
+          echo "Run] sbt ci-release"
+          export SOURCE_DATE_EPOCH=$(date +%s)
+          echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
+          echo 'sbt -J-Xmx2048m -v clean +test +packagedArtifacts ci-release devOopsGitHubReleaseUploadArtifacts'
+          sbt \
+            -J-XX:MaxMetaspaceSize=1024m \
+            -J-Xmx2048m \
+            -v \
+            clean \
+            +test \
+            +packagedArtifacts \
+            ci-release
+
