--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           - { name: 'Scala 2', version: "2.13.3",    binary-version: "2.13",      java-version: "adopt@1.11", report: "report" }
           - { name: 'Scala 3', version: "3.0.0-RC1", binary-version: "3.0.0-RC1", java-version: "adopt@1.11", report: "" }
           - { name: 'Scala 3', version: "3.0.0-RC2", binary-version: "3.0.0-RC2", java-version: "adopt@1.11", report: "" }
+          - { name: 'Scala 3', version: "3.0.0-RC3", binary-version: "3.0.0-RC3", java-version: "adopt@1.11", report: "" }
 
     steps:
       - uses: actions/checkout@v2.3.4
