--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,6 @@ on:
       - '*'
 
 env:
-  SCALA_BINARY_VERSION: "2.13"
   GH_JAVA_VERSION: "adopt@1.11"
 
 
@@ -18,35 +17,36 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: olafurpg/setup-scala@v10
-      with:
-        java-version: ${{ env.GH_JAVA_VERSION }}
+      - uses: actions/checkout@v2.3.4
+      - uses: olafurpg/setup-scala@v10
+        with:
+          java-version: ${{ env.GH_JAVA_VERSION }}
 
-    - name: Cache SBT
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.ivy2/cache
-          ~/.cache/coursier
-          ~/.sbt
-        key: ${{ runner.os }}-sbt-${{ env.SCALA_BINARY_VERSION }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-sbt-${{ env.SCALA_BINARY_VERSION }}-
+      - name: Cache SBT
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.ivy2/cache
+            ~/.cache/coursier
+            ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}
+          restore-keys: |
+            ${{ runner.os }}-sbt
 
-    - name: sbt GitHub Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
-      run: |
-        echo "Run] sbt GitHub release"
-        echo "mkdir -p dotty-docs"
-        mkdir -p dotty-docs
-        export SOURCE_DATE_EPOCH=$(date +%s)
-        echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
-        echo 'sbt -J-Xmx2048m devOopsGitHubRelease'
-        sbt \
-          -J-Xmx2048m \
-          devOopsGitHubRelease
+      - name: sbt GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
+        run: |
+          echo "Run] sbt GitHub release"
+          echo "mkdir -p dotty-docs"
+          mkdir -p dotty-docs
+          export SOURCE_DATE_EPOCH=$(date +%s)
+          echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
+          echo 'sbt -J-Xmx2048m devOopsGitHubRelease'
+          sbt \
+            -J-XX:MaxMetaspaceSize=1024m \
+            -J-Xmx2048m \
+            devOopsGitHubRelease
 
   publish:
     needs: gh-release
@@ -54,47 +54,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.3.4
-      with:
-        fetch-depth: 0
-    - uses: olafurpg/setup-scala@v10
-      with:
-        java-version: ${{ env.GH_JAVA_VERSION }}
-    - uses: olafurpg/setup-gpg@v3
+      - uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
+      - uses: olafurpg/setup-scala@v10
+        with:
+          java-version: ${{ env.GH_JAVA_VERSION }}
+      - uses: olafurpg/setup-gpg@v3
 
-    - name: Cache SBT
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.ivy2/cache
-          ~/.cache/coursier
-          ~/.sbt
-        key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-sbt
+      - name: Cache SBT
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.ivy2/cache
+            ~/.cache/coursier
+            ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}
+          restore-keys: |
+            ${{ runner.os }}-sbt
 
-    - name: "sbt ci-release - ${{ github.run_number }}"
-      if: startsWith(github.ref, 'refs/tags/v')
-      env:
-        PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-        PGP_SECRET: ${{ secrets.PGP_SECRET }}
-        SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-        SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
-      run: |
-        echo "Run] sbt ci-release"
-        export SOURCE_DATE_EPOCH=$(date +%s)
-        echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
-        echo 'sbt -J-Xmx2048m -v clean +test +packagedArtifacts ci-release devOopsGitHubReleaseUploadArtifacts'
-        sbt \
-          -J-XX:MaxMetaspaceSize=1024m \
-          -J-Xmx2048m \
-          -v \
-          clean \
-          +test \
-          +packagedArtifacts \
-          ci-release \
-          devOopsGitHubReleaseUploadArtifacts
+      - name: "sbt ci-release - ${{ github.run_number }}"
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
+        run: |
+          echo "Run] sbt ci-release"
+          export SOURCE_DATE_EPOCH=$(date +%s)
+          echo "SOURCE_DATE_EPOCH=$SOURCE_DATE_EPOCH"
+          echo 'sbt -J-Xmx2048m -v clean +test +packagedArtifacts ci-release devOopsGitHubReleaseUploadArtifacts'
+          sbt \
+            -J-XX:MaxMetaspaceSize=1024m \
+            -J-Xmx2048m \
+            -v \
+            clean \
+            +test \
+            +packagedArtifacts \
+            ci-release \
+            devOopsGitHubReleaseUploadArtifacts
 
 
   publish-snapshot:
@@ -118,7 +118,7 @@ jobs:
             ~/.ivy2/cache
             ~/.cache/coursier
             ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt') }}
           restore-keys: |
             ${{ runner.os }}-sbt
 
@@ -143,4 +143,3 @@ jobs:
             +test \
             +packagedArtifacts \
             ci-release
-
