--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,27 +18,19 @@ jobs:
     strategy:
       matrix:
         scala:
-          - { name: 'Scala 2', version: "2.11.12", binary-version: "2.11", java-version: "adopt@1.8" , report: "" }
-          - { name: 'Scala 2', version: "2.12.12", binary-version: "2.12", java-version: "adopt@1.11", report: "" }
-          - { name: 'Scala 2', version: "2.13.11", binary-version: "2.13", java-version: "adopt@1.11", report: "report" }
-          - { name: 'Scala 3', version: "3.0.0",   binary-version: "3",    java-version: "adopt@1.11", report: "" }
+          - { name: 'Scala 2', version: "2.11.12", binary-version: "2.11", java-version: "11", java-distribution: "temurin", report: "" }
+          - { name: 'Scala 2', version: "2.12.12", binary-version: "2.12", java-version: "11", java-distribution: "temurin", report: "" }
+          - { name: 'Scala 2', version: "2.13.11", binary-version: "2.13", java-version: "11", java-distribution: "temurin", report: "report" }
+          - { name: 'Scala 3', version: "3.0.0",   binary-version: "3",    java-version: "11", java-distribution: "temurin", report: "" }
 
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: olafurpg/setup-scala@v10
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.scala.java-version }}
-
-      - name: Cache SBT
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.cache/coursier
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-
+          distribution: ${{ matrix.scala.java-distribution }}
+          cache: sbt
+      - uses: sbt/setup-sbt@v1
 
       - name: "[Push] Build All for ${{ matrix.scala.name }}: ${{ matrix.scala.version }} - ${{ github.run_number }}"
         if: github.event_name == 'push'
