--- a/.github/workflows/m-doc-site-publish.yml
+++ b/.github/workflows/m-doc-site-publish.yml
@@ -11,30 +11,22 @@ jobs:
     strategy:
       matrix:
         scala:
-          - { version: "2.13.10", binary-version: "2.13", java-version: "11" }
+          - { version: "2.13.10", binary-version: "2.13", java-version: "11", java-distribution: "temurin" }
         node:
           - { version: "18.13.0" }
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.scala.java-version }}
+          distribution: ${{ matrix.scala.java-distribution }}
+          cache: sbt
+      - uses: sbt/setup-sbt@v1
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node.version }}
           registry-url: 'https://registry.npmjs.org'
-
-      - name: Cache SBT
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.cache/coursier
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-
 
       - name: Cache npm
         uses: actions/cache@v4
